--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-scripts": "5.0.1",
+    "react-type-animation": "^3.2.0",
     "stylis": "^4.3.1",
     "stylis-plugin-rtl": "^2.1.1",
     "swiper": "^11.0.6",
