--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,9 +1,9 @@
 {
-  "short_name": "React App",
+  "short_name": "monista",
   "name": "Create React App Sample",
   "icons": [
     {
-      "src": "",
+      "src": "assets/image/fave-icon.png",
       "sizes": "64x64 32x32 24x24 16x16",
       "type": "image/x-icon"
     },
